--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.2.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.2",
