--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.0",
+    "axios": "^0.21.4",
     "bootstrap": "^4.5.3",
-    "formik": "^2.2.1",
+    "formik": "^2.2.9",
     "js-file-download": "^0.4.12",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
-    "react-datepicker": "^3.3.0",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.2",
@@ -37,14 +37,19 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
+      ">0.3%",
+      "not ie 11",
+      "not dead", 
       "not op_mini all"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      ">0.3%",
+      "not ie 11",
+      "not dead", 
+      "not op_mini all"
     ]
   }
 }
